<resources>
    <string name="next_button">Next</string>
    <string name="text_header">Message Received</string>
    <string name="editText_main">Type message</string>
    <string name="button_reply">Reply</string>
    <string name="editText_second">Type reply</string>
    <string name="text_header_reply">Reply Received</string>

    <string name="edittext_uri">https://developer.android.com</string>
    <string name="button_uri">Open Website</string>

    <string name="edittext_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>

    <string name="edittext_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>

    <string name="title1">Cry for a Shadow</string>
    <string name="article1">Many a Beatle fanatic started down the outtake road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.</string>
    <string name="title2">My Bonnie - Ain’t She Sweet</string>
    <string name="article2">At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="yes_message">ARTICLE: Like</string>
    <string name="no_message">ARTICLE: Thanks</string>
    <string name="question_article">LIKE THE ARTICLE?</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="exception_message">must implement OnFragmentInteractionListener</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_1">Team 1</string>
    <string name="minus_button_description">Minus Button</string>
    <string name="initial_count">0</string>
    <string name="plus_button_description">Plus Button</string>
    <string name="team_2">Team 2</string>
    <string name="ready_to_work">I am ready to start work!</string>
    <string name="start_task">Start Task</string>
    <string name="napping">Napping...</string>

    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="contact">Contact</string>
    <string name="order">Order</string>
    <string name="status">Status</string>
    <string name="favorites">Favorites</string>
    <string name="alert">alert</string>
    <string name="date">Date</string>

    <string name="alert_message">Click OK to continue, or Cancel to stop:</string>
    <string name="onOk">Pressed OK</string>
    <string name="ok">OK</string>
    <string name="onCancel">Pressed Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="text_result_simple_async_task">Awake at last after sleeping for %s milliseconds!</string>

    <string name="instructions">Enter a book name to find out who wrote the book. </string>
    <string name="button_text">Search Books</string>
    <string name="input_hint">Book Title</string>

    <string name="loading">Loading…</string>
    <string name="no_results">"No Results Found"</string>
    <string name="no_search_term">Please enter a search term</string>
    <string name="no_network">Please check your network connection and try again.</string>
    <string name="send_broadcast">Send broadcast</string>
    <string name="unknown_intent_action">unknown itent action</string>
    <string name="power_connected">power connected</string>
    <string name="power_disconnected">power disconnected!</string>
    <string name="custom_receiver">custom receiver</string>

    <string name="blue_button">Blue</string>
    <string name="green_button">Green</string>
    <string name="red_button">Red</string>
    <string name="black_button">Black</string>
    <string name="default_count">0</string>
    <string name="count_button">Count</string>
    <string name="reset_button">Reset</string>
    <string name="permission_denied_message">You denied us to read your contacts!!!</string>
    <string name="allow">Allow</string>

    <string name="permission_request_title">Permission needed</string>
    <string name="permission_request_message">We need some permission to work properly</string>
    <string name="permission_request_denied">You denied our required permission</string>
</resources>
